--- a/Assigments-Exercises/CSS-Assigments/CSS-4/CSS4.css
+++ b/Assigments-Exercises/CSS-Assigments/CSS-4/CSS4.css
@@ -5,20 +5,61 @@ body {
     margin: 0;
     padding: 0;
     border: 0;
+    background-color: #000000;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
 
 }
 
-/* h1 */
+h1 {
+   text-align: center;
+   font-family: "Bebas Neue", sans-serif;
+   color: #f1f1f1;
+}
 
-/* #subtitle */
+#subtitle {
+   font-family: "Montserrat", sans-serif;
+   text-align: center;
+   color: #f1f1f1;
+}
 
-/* .flexboxContainer */
+.flexboxContainer {
+   width: 100%;
+   height: 500px;
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   justify-content: center;
+   gap: 5%;
+}
 
-/*.flexboxContainer > div */
+.flexboxContainer > div {
+   width: 20%;
+   height: 50%;
+   background-image: linear-gradient(to right, rgba(12, 62, 224, 0), rgb(150, 105, 47));
+   display: flex;
+   flex-direction: column;
+   gap: 5%;
+   padding: 3%;
+   transition-duration: 0.5s;
+   cursor: pointer;
+   border-radius: 50px;
+}
 
-/* a */
+.flexboxContainer > div a {
+   text-decoration: none;
+   justify-content: center;
+   font-family: "Montserrat", sans-serif;
+   color: #f1f1f1;
+}
 
-/* img */
+.flexboxContainer > div img {
+   width: 80%;
+}
 
-/* .flexboxContainer > div:hover */
-
+.flexboxContainer > div:hover {
+   background-color: #333;
+   box-shadow: 0 0 20px rgb(38, 207, 165);
+   border-radius: 20px;
+   transform: scale(1.05);
+}
